bottom-gap fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -633,6 +633,9 @@ margin-left: 5rem;
 .footer
 {
   padding-top: 2rem;
+  height: 1em;
+    width: 100%;
+    margin-bottom: 10em;
 }
 
 .footer__container
